# emscripdtsgen

./: .gitignore  CMakeLists.txt  bindings.cpp  emscripdtsgen.cpp  emscripdtsgen.hpp  index.html  lib.cpp  lib.hpp  main.ts  package-lock.json  package.json  readme.md  tsconfig.json
examples/: CMakeLists.txt  bindings.cpp
examples/basic/: index.html  main.ts
examples/es6/: index.html  main.ts  tsconfig.json
examples/lib/: lib.cpp  lib.hpp
examples/modularize/: index.html  main.ts
src/: binding_api.hpp  emscripdtsgen.cpp  emscripdtsgen.hpp
